Amount Alignment Fixed.

--- a/VIS/Areas/VIS/Content/F20/Controls.css
+++ b/VIS/Areas/VIS/Content/F20/Controls.css
@@ -85,7 +85,7 @@
     align-items: center;*/
 }
 
-.vis-control-wrap input[data-type='int'] {
+.vis-ad-w-p-vc-gc [data-type='int'] {
     text-align: right;
 }
 
