--- a/VIS/Areas/VIS/Content/VIS.rtl.css
+++ b/VIS/Areas/VIS/Content/VIS.rtl.css
@@ -529,7 +529,7 @@ html[dir="rtl"] .vis-Email-rytWrap {
     border-left: 0px;
 }
 
-html[dir="rtl"] .vis-control-wrap input[data-type='int'] {
+html[dir="rtl"] .vis-ad-w-p-vc-gc [data-type='int'] {
     text-align: left;
 }
 
